@@ -1,0 +1,12 @@
+
+
+body {
+    width: 367px;
+    margin-left: 8px;
+    margin-right: 25px;
+}
+
+h1 {
+    font-size: 130%;
+    border-bottom: solid 3px rgb(128,128,128);
+}
