@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="popup.css"/>
     <script src="../scripts/try_xpath_functions.js"></script>
     <script src="popup.js"></script>
   </head>
